@@ -34,7 +34,6 @@
 
 /* ------------------------------------------------------- */
 /** Allocates a new gerb_stats structure
-   @param stats will be freed up if not NULL
    @return gerb_stats pointer on success, NULL on ERROR */
 gerb_stats_t *
 gerb_stats_new(void) {
@@ -99,3 +98,67 @@ gerb_stats_add_layer(gerb_stats_t *accum_stats,
 
     return;
 }
+
+
+/* ------------------------------------------------------- */
+/** Allocates a new drill_stats structure
+   @return drill_stats pointer on success, NULL on ERROR */
+drill_stats_t *
+drill_stats_new(void) {
+
+    drill_stats_t *stats;
+
+    /* Malloc space for new stats struct.  Return NULL if error. */
+    if ((stats = (drill_stats_t *)malloc(sizeof(drill_stats_t))) == NULL) {
+        return NULL;
+    }
+
+    /* Set new stats struct to zero */
+    memset((void *)stats, 0, sizeof(drill_stats_t));
+
+    return stats;
+}
+
+
+/* ------------------------------------------------------- */
+void
+drill_stats_add_layer(drill_stats_t *accum_stats, 
+		     drill_stats_t *input_stats) {
+
+    accum_stats->comment += input_stats->comment;
+    /* F codes go here */
+
+    accum_stats->G00 += input_stats->G00;
+    accum_stats->G01 += input_stats->G01;
+    accum_stats->G02 += input_stats->G02;
+    accum_stats->G03 += input_stats->G03;
+    accum_stats->G05 += input_stats->G05;
+    accum_stats->G90 += input_stats->G90;
+    accum_stats->G91 += input_stats->G91;
+    accum_stats->G93 += input_stats->G93;
+    accum_stats->G_unknown += input_stats->G_unknown;
+
+    accum_stats->M00 += input_stats->M00;
+    accum_stats->M01 += input_stats->M01;
+    accum_stats->M18 += input_stats->M18;
+    accum_stats->M25 += input_stats->M25;
+    accum_stats->M30 += input_stats->M30;
+    accum_stats->M31 += input_stats->M31;
+    accum_stats->M45 += input_stats->M45;
+    accum_stats->M47 += input_stats->M47;
+    accum_stats->M48 += input_stats->M48;
+    accum_stats->M71 += input_stats->M71;
+    accum_stats->M72 += input_stats->M72;
+    accum_stats->M95 += input_stats->M95;
+    accum_stats->M97 += input_stats->M97;
+    accum_stats->M98 += input_stats->M98;
+    accum_stats->METR += input_stats->METR;
+    accum_stats->METI += input_stats->METI;
+    accum_stats->METC += input_stats->METC;
+    accum_stats->M_unknown += input_stats->M_unknown;
+
+    accum_stats->unknown += input_stats->unknown;
+
+    return;
+}
+
