@@ -36,4 +36,5 @@ struct gerbv_redraw_state_t {
 };
 
 gerb_stats_t *generate_gerber_analysis(void);
+gerb_stats_t *generate_drill_analysis(void);
 
